# MinWeb2025-2-axum

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Cargo.toml  Dockerfile  package.json
backend/src/: index.ts  main.rs
backend/src/application/usecases/: TodoUseCase.ts
backend/src/domain/: mod.rs
backend/src/domain/entities/: Todo.ts
backend/src/domain/models/: todo.rs
backend/src/domain/repositories/: TodoRepository.ts  mod.rs  todo_repository.rs
backend/src/infrastructure/: db.rs  mod.rs  todo_repository.rs
backend/src/infrastructure/repositories/: MySqlTodoRepository.ts
backend/src/interfaces/controllers/: todoController.ts
backend/src/presentation/: mod.rs
backend/src/presentation/handlers/: mod.rs  todo_handler.rs
backend/src/usecase/: mod.rs  todo_usecase.rs
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx
frontend/src/domain/entities/: Todo.ts
frontend/src/infrastructure/api/: TodoApi.ts
frontend/src/presentation/components/: EditTodoModal.tsx  TodoForm.tsx  TodoItem.tsx
frontend/src/presentation/pages/: TodoPage.tsx
mysql/init/: create_tables.sql
nginx/conf.d/: default.conf
