[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "timeout"] }
tower-http = { version = "0.6.6", features = ["add-extension", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
dotenvy = "0.15.7"